<resources>
    <string name="app_name">ToDo</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_text_register">Register</string>
    <string name="button_text_login">Login</string>
    <string name="no_alarm">No alarm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="content_description_has_alarm">has alarm</string>
    <string name="error_item_title">The title cannot be empty</string>
    <string name="edit">Edit</string>
    <string name="error_item_alarm">Alarm time should be later than current time</string>
    <string name="remind_me">Remind Me</string>
    <string name="repeat_alarm">Repeat Alarm</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="every">Every</string>
    <string name="the">"The "</string>
    <string name="at">"At "</string>
    <string name="_00">00</string>
    <string name="on">On</string>
    <string name="error_repeat_alarm">Please specify how long the app should wait to re-notify you</string>
</resources>
